--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,9 @@ img:hover {
   box-shadow: -1px 1px #aa2222, -2px 2px #aa2222, -3px 3px #aa2222, -4px 4px #aa2222, -5px 5px #aa2222;
   background-color: #dd4444;
 }
-.column .small {}
-.column .med {}
-.column .large {}
+.column img {.small }
+.column img {.med }
+.column img {.large}
 
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 
