--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ img:hover {
   border: 1px solid #22aa44;
   box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;
   background-color: #44cc66;
+  
 }
 
 .indifferent {
@@ -46,8 +47,27 @@ img:hover {
   background-color: #dd4444;
 }
 
-.container-dubious {width: 48%;}
 
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 
+.column {
+  width: 30%;
+  display: inline-block;
+} 
 /* create your tile classes! we recommend .small .med .large */
+
+
+.small {
+  width: 100%;
+  height: 100%;
+}
+
+.med {
+  width: 201.5%;
+  height: 201.5%;
+}
+
+.large {
+  width: 303%;
+  height: 303%;
+} 
